--- a/index.css
+++ b/index.css
@@ -125,6 +125,40 @@ i.fa {
   
   }
 
+@media only screen and (max-width: 770px) { /* tablet size */
+
+    img {
+        width: 500px;
+    }
+    
+    .title {
+        font-size: 38px;
+    }
+    
+    .subtitle {
+        font-size: 26px;
+    }
+    
+    .paragraph {
+        font-size: 16px;
+        
+    }
+    
+    .heading {
+        font-size: 16px;
+    
+    }
+    
+    .summary {
+        font-size: 14px;
+    
+    }
+    .copyright {
+        font-size: 16px; 
+    }
+
+}
+
 @media only screen and (max-width: 450px) { /* mobile size */
 
     img {
@@ -152,6 +186,9 @@ i.fa {
     .summary {
         font-size: 12px;
     
+    }
+    .copyright {
+        font-size: 14px; 
     }
     
     }
